--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   ],
   "main": "src/index.js",
   "dependencies": {
+    "antd": "4.3.5",
     "react": "16.12.0",
+    "react-bootstrap": "1.0.1",
     "react-dom": "16.12.0",
     "react-scripts": "3.0.1"
   },
